# FuckMouse

./: .gitignore  README.md
mouselib/: CMakeLists.txt  xinputsimulator.cpp  xinputsimulatorimpl.h  xinputsimulatorimplmacos.cpp  xinputsimulatorimplmacos.h
src/: CMakeLists.txt  main.cpp  util.cpp
src/include/: xinputsimulator.h
